--- a/index.html
+++ b/index.html
@@ -1,53 +1,48 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Stefany</title>
-<link rel="stylesheet" type="text/css" href="yo.css">
-<link rel="stylesheet" type="text/css" href="fonts.css">
+	<meta charset="UTF-8">
+	<title>Turismo Mari&ntildeo</title>
+	<link rel="stylesheet" href="estilos.css">
+	<link rel="stylesheet" href="Regiones.css">
 </head>
-<body background="Fondo.jpg">
-<div class="social">
-	<ul>
-		<li><a href="http://www.facebook.com" class="icon-facebook" target="_blank"></a></li>	
-		<li><a href="http://www.twitter.com" class="icon-twitter" target="_blank"></a></li>
-		<li><a href="http://www.googleplus.com" class="icon-google" target="_blank"></a></li>
-		<li><a href="http://www.pinterest.com" class="icon-pinterest" target="_blank"></a></li>
-		<li><a href="http://www.mailto:" class="icon-mail" target="_blank"></a></li>
+
+<body>
+<div id="header">
+	<ul class="nav">
+		<li><a href="http://wiki.israelcueva.com/Colegio/Proyectos/4-Secundaria" target="_blank">Inicio</a></li>
+		<li><a href="https://www.facebook.com/pages/Colegio-Maria-Reyna-De-Corazones/468153253298315" target="_blank">Nosotros</a></li>
+		<li><a href="https://www.facebook.com/daniellashirley.garciamendoza?fref=ts" target="_blank">Cont&aacutectame</a></li>
+		<li><a href="yo.html" target="_blank">Mi p&aacutegina</a></li>
+		<li><a href="http://israelcueva.com/" target="_blank">Profesor</a></li>
 	</ul>
 
-<div id="central">
-<p><h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mi foto</h2></p>
-<img src="Stefany.jpg" title="Mi foto :)" width= 300 height=400 border=2 VSPACE=3 hspace=10 align=left>
-
-<div id="datos">
-<p><u><h2>Mis datos</h3></u></p>
-<br></br><h4>
-<p>Apellidos: <em>Mari&ntildeo Chinga</em></p>
-<br>Nombres: <em>Stefany Shirley</em></br>
-<br>Domicilio: <em>Gambeta Baja</em></br>
-<br>Distrito: <em>Callao</em></br>
-<br>Departamento: <em>Lima, Per&uacute</em></br>
-<br>Tel&eacutefono: <em>666-666</em></br>
-<br>Celular: <em>992994267</em></br>
-<br>Mi correo: <em>ssmarino@gmail.com</em></br>
-<br>Correo del profesor: <em>Israel@israelcueva.com</em></br>
-<br><a href="mailto:Israel@israelcueva.com" title="Enviar correo al profesor">Enviar correo</a></br>
-</h4></div>
-
-<div id="inferior">
-<br><h3>Hola a todos. Bienvenidos a mi primera p&aacutegina web. Gracias por visitar mi blog. Este es una versi&oacuten demo la cual la desarrollar&eacute 
-con el transcurso del tiempo. Este tutorial que insert&eacute me ayud&oacute mucho para la creaci&oacuten de mi p&aacutegina web.
- Espero que disfruten del video del canal <a style="color:#80BFFF" href="https://www.youtube.com/user/FalconMasters" target="_blank">Falcon Masters</a>.</h3></br>
-<center>
-<video controls="controls" widht="400" height="300">
-<source src="video.mp4" type="video/mp4"/>
-<source src="video.ogg" type="video/ogg"/>
-<source src="video.webm" type="video/webm"/>
-</video></center></br>
-<center><IMG SRC="Pokemon.gif"></center>
-<center><h2>Gracias...</h2></center>
-</div>
-</div>
+<div class="contenedor">
+	<header><h1>Regiones del Per&uacute</h1>
+	</header>
+	<section class="main">
+	<img src="https://upload.wikimedia.org/wikipedia/commons/1/1c/Peru_veg_1970.jpg" alt="">
+	<p>
+	Costa:
+Una estrecha franja de desiertos y valles f&eacutertiles ba&ntildeados por el oc&eacuteano Pac&iacutefico caracterizan la costa peruana. Los valles f&eacutertiles surgen de los r&iacuteos que bajan de la Cordillera de los Andes, la divisi&oacuten geogr&aacutefica con la sierra, y se pierden en el mar.
+La costa tiene un clima templado c&aacutelido, sin extremo fr&iacuteo o calor sofocante, pero con una alta humedad, densas neblinas que producen una intensa sensaci&oacuten de fr&iacuteo en invierno.  En verano, hay muy poca neblina y la temperatura alcanza los 30&#176C.
+En su parte norte, la costa tiene temperaturas c&aacutelidas casi todo el a&ntildeo, con un corto per&iacuteodo de lluvias entre noviembre y diciembre. La costa central y sur presentan temperatura templada, con pocas precipitaciones, h&uacutemeda y con alta nubosidad.
+	</p>
+	</section>
+	<aside>
+	<p>
+	Sierra:
+Es la regi&oacuten monta&ntildeosa del Per&uacute, la Cordillera de los Andes domina su paisaje y tiene a su vez varias ecorregiones en sus diferentes niveles de altitud. Los Andes del norte son m&aacutes bajos y m&aacutes h&uacutemedos que el promedio, los Andes del centro son los m&aacutes altos y empinados, y es aqu&iacute donde se encuentra el pico m&aacutes alto del pa&iacutes, el nevado Huascar&aacuten, con 6,768 msnm. Los Andes del sur son de mayor espesor, tambi&eacuten se le conoce como el altiplano.
+La sierra tiene dos estaciones: el verano (abril a octubre) con d&iacuteas soleados, noches fr&iacuteas y poca lluvia, la &eacutepoca ideal para visitarla; y el invierno (noviembre a marzo) con lluvias abundantes. Durante el d&iacutea, el sol puede calentar hasta los 24&#176C y en las noches la temperatura puede bajar hasta los -3&#176C.
+	</p>
+	</aside>
+	<footer>
+	<p>
+	Selva:
+Ubicada hacia el este, es una vasta regi&oacuten llana cubierta por vegetaci&oacuten en la cuenca del r&iacuteo Amazonas, que nace de la uni&oacuten de los r&iacuteos Mara&ntilde&oacuten y Ucayali.  Es la regi&oacuten m&aacutes extensa del territorio del Per&uacute. Est&aacute formada por la selva alta o ceja de monta&ntildea (arriba de los 700 msnm) que se caracteriza por sus bosques nubosos y la selva baja (por debajo de los 700 msnm).
+Al igual que la sierra, la selva tiene dos estaciones bien marcadas. Los meses de noviembre a marzo, son de abundantes lluvias; y entre abril y octubre hay pocas lluvias, &eacutepoca ideal para viajar pues los r&iacuteos disminuyen su caudal y las carreteras son f&aacutecilmente transitables. La humedad es muy alta durante todo el a&ntildeo.
+Eventualmente, entre los meses de mayo y agosto se producen ocasionales "friajes" o "surazos", fr&iacuteos provenientes del extremo sur del continente en los cuales la temperatura suele descender hasta 8&#176-12&#176C.
+Informaci&oacuten sobre el estado del tiempo en las diferentes regiones del pa&iacutes, aqu&iacute.
+	</p>
+	</footer>
 </body>
-</html>
