--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	<li><img src="destino/Nazca.jpg" WIDTH=178 HEIGHT=180 alt="Nazca"></li>
 	<li><img src="destino/Misti.jpg" WIDTH=178 HEIGHT=180 alt="Misti"></li>
 	<li><img src="destino/Lunahuana.jpg" WIDTH=178 HEIGHT=180 alt=""></li>
-	<li><img src="destino/Callao.jpg" WIDTH=178 HEIGHT=180 alt=""></li>
+	<li><img src="destino/Callao.JPG" WIDTH=178 HEIGHT=180 alt=""></li>
 	<li><img src="destino/Tingo Maria.jpg" WIDTH=178 HEIGHT=180 alt=""></li>
 	<li><img src="destino/Tarapoto.jpg" WIDTH=178 HEIGHT=180 alt=""></li>
 	<li><img src="destino/Puno.jpg" WIDTH=178 HEIGHT=180 alt=""></li>
